err/pyras.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyras'...
Listing './lib/python3.5/site-packages/pyras/controllers'...
Listing './lib/python3.5/site-packages/pyras/controllers/hecras'...
Listing './lib/python3.5/site-packages/pyras/controllers/hecras/hecrascontroller'...
Listing './lib/python3.5/site-packages/pyras/controllers/hecras/hecrasgeometry'...
Listing './lib/python3.5/site-packages/pyras/core'...
Listing './lib/python3.5/site-packages/pyras/io'...
Listing './lib/python3.5/site-packages/pyras/io/hecras'...
Compiling './lib/python3.5/site-packages/pyras/io/hecras/read_ras.py'...
***   File "./lib/python3.5/site-packages/pyras/io/hecras/read_ras.py", line 113
    'D:\Users\penac1\Dropbox (Personal)\it\repos\git\pyras\temp_examples\Steady Examples'
    ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

Listing './lib/python3.5/site-packages/pyras/io/mike11'...
Listing './lib/python3.5/site-packages/pyras/tests'...
Listing './lib/python3.5/site-packages/pyras/tools'...
Listing './lib/python3.5/site-packages/pyras/util'...
Listing './lib/python3.5/site-packages/pyras-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
